tests/paczka1/fuzzy1/66720750.err
Error in line 35: x1SUf9d40e S792 17,2
Error in line 20: iSvdlnaM A211 76,7
